# Circuitos

./: .cursor-orchestrator-config 2.json  .dockerignore  .env.example  .gitignore  ADAPTIVE_RAG_CLAUDE_CODE_LOGIC.md  ANALYSIS-COMPLETE-SUMMARY.md  APPROVAL_NEEDED.md  ARCHITECTURE_QUICK_REFERENCE.md  AUTOMATION.md  BHPH_DEALERSHIP_RESEARCH_COMPLETE.md  BUILD-STRUCTURE.md  BUILD_EVERYTHING_NOW.md  CIRCUIT-OS-GAP-ANALYSIS-2025.md  CIRCUITOS-MISSION-STATEMENT.md  CIRCUITOS_COMPLETE_TECH_STACK_GUIDE.md  CIRCUIT_OS_COMPLETE_SYSTEM_OVERVIEW.md  CIRCUIT_OS_INTELLIGENCE_LAYER_COMPLETE.md  CIRCUIT_OS_LIVE_ACCESS.md  CIRCUIT_OS_OBSERVABILITY_COMPLETE.md  CIRCUIT_OS_SECURITY_LAYER_COMPLETE.md  CIRCUIT_SCRIPT_COMPLETE_ENGINE.md  CLAUDE.md  CLEANUP_AND_ORGANIZATION_PLAN 2.md  CLEANUP_COMMANDS 2.sh  CODEBASE_COMPREHENSIVE_ANALYSIS.md  COLOR-PALETTE-GUIDE.html  COMPLETE-SETUP-GUIDE-STEP-BY-STEP.md  COMPLETE-SYSTEM-OVERVIEW.md  CONTEXT7-QUICK-REFERENCE.txt  CONTEXT7-QUICK-START.sh  CURRENT_STATUS.md  CUSTOM-GPT-BUILDER-INSTRUCTIONS.md  CUSTOM-GPT-USAGE-GUIDE.md  DARK-KNIGHT-EXECUTIVE-SUMMARY.md  DARK-KNIGHT-INTEGRATION-GUIDE.md  DEPLOYMENT-GUIDE-DRN.md  DEPLOYMENT-SUMMARY.txt  DEPLOYMENT_COMPLETE_STATUS.md  DEPLOY_NOW_APPROVED.md  DIGITALOCEAN-DEPLOYMENT-GUIDE.md  (+112 more)
Active/agentforce_emulator/: .gitignore 2  Dockerfile.api  Dockerfile.web  INTERACTIVE_DEMO.html  README 2.md  docker-compose.local 2.yml  env.example  pyproject.toml  validate_multi_agent_architecture.py  validation_results.json
Active/agentforce_emulator/apps/control_panel/: README 2.md  index 2.html  package 2.json  package-lock.json
Active/agentforce_emulator/services/agent_runtime/: __init__.py  app.py  (+5 more)
(+544 files in other folders)
