[project]
name = "agentforce-emulator"
version = "0.1.0"
description = "Local-first emulator for Salesforce Agentforce lost opportunity agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis>=5.1.0",
    "langchain>=0.2.12",
    "langgraph>=0.0.70",
    "langchain-openai>=0.1.17",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "typer[all]>=0.12.4",
    "rich>=13.7.1",
    "pendulum>=3.0.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.2",
    "pre-commit>=3.7.1",
]

[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "C4", "TID", "SIM", "W"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
package = false


